# K-MIMICS-MEDS

./: .gitignore  README.md  bootstrap.py  check.py  pyproject.toml  validate.py  validation.ipynb
configs/: messy.yaml
experiments/: concepts.yaml
experiments/lane_a/: preprocess_kmimic.py  run_lane_a.sh
experiments/lane_a/configs/: kmimic_train.yaml  mimic_train.yaml  triplet_preproc.yaml
experiments/lane_b/: feature_extract.py  run_lane_b.sh  train_xgb.py
experiments/lane_b/features/kmimic/: features_held_out.parquet  features_train.parquet  features_tuning.parquet
experiments/lane_b/results/: bootstrap_ci.json  metrics.json  predictions_kmimic_within.parquet  predictions_mimic_to_kmimic.parquet
src/kmimic_meds/etl/: meds_convert.py  pre_meds.py
src/kmimic_meds/utils/: io.py
